fdo#33960, Implement new rule for xref to numbered paragraphs